--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,340 @@
 .App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+}
+
+.headline {
+  width: 100%;
+  padding: 1rem;
+  color: rgb(25, 24, 24);
+  position: fixed;
+  top: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.headline h1 {
+  margin: 0;
+  font-size: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.chat-container {
+  display: flex;
+  width: 85%;
+  height: 80%;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chat-history-container {
+  width: 20%;
+  height: 100%;
+  border-right: 1px solid #ddd;
   display: flex;
   flex-direction: column;
+}
+
+.chat-option-container {
+  width: 20%;
+  height: 100%;
+  border-left: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+}
+.chat-mode-sub-container {
+  padding: 1rem
+}
+.type {
+  padding-top: 1.2rem;
+}
+.styled-select {
+  /* display: inline-block; */
+  /* background-color: #0dcaf0; */
+  /* color: white;
+  cursor: pointer;
+  font-size: 1.1em;
+  margin-bottom: 1.5em;
+  padding: 0.25em 0;
+  position: relative; */
+  width: 11em;
+  padding-top: 1rem;
+}
+
+/* .styled-select:before {
+  font-family: "FontAwesome";
+  border: solid 1px #7e6f5f;
+  border-width: 0 0 0 1px;
+  content: "\f103";
+  color: #706254;
+  font-size: 1.25em;
+  padding-left: 0.25em;
+  position: absolute;
+  pointer-events: none;
+  right: 0.35em;
+} */
+
+/* select {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #7e6f5f;
+  display: inline-block;
+  font-size: 1em;
+  margin: 0;
+  padding: 0 2em 0 1em;
+  width: 100%;
+} */
+
+.new-chat-button {
+  background-color: #0dcaf0;
+  color: white;
+  border: none;
+  padding: 1rem 1rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+  width: 100%;
+}
+
+.chat-history {
+  flex: 1;
+  overflow-y: auto;
+}
+
+.chat {
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.chat.selected {
+  background-color: #dcd9d9;
+}
+
+.chat-ui {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 85%;
+}
+
+.chat-messages {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  padding: 16px;
+}
+
+.message {
+  margin-bottom: 8px;
+  padding: 8px;
+  max-width: 90%;
+}
+
+.message.user {
+  background-color: #DCF8C6;
+  color: #000;
+  align-self: flex-end;
+  border-radius: 7px 7px 0 7px;
+}
+
+.message.assistant {
+  background-color: #dfdddd;
+  color: #000;
+  align-self: flex-start;
+  border-radius: 7px 7px 7px 0;
+}
+
+.chat-input {
+  display: flex;
+  padding: 1rem;
+  border-top: 1px solid #ddd;
+}
+
+.chat-input input {
+  flex: 1;
+  border: none;
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  outline: none;
+}
+
+.chat-input button {
+  margin-left: 1rem;
+  padding: 1rem 2rem;
+  background-color: #0dcaf0;
+  color: white;
+  border: none;
+  border-radius: 1.2rem;
+  cursor: pointer;
+}
+
+.chat-input button:disabled {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
+
+.chat-input textarea {
+  flex: 1;
+  border: none;
+  outline: none;
+  resize: none;
+  font-size: inherit;
+  line-height: 1.5rem;
+  font-family: inherit;
+}
+
+.code-block {
+  display: block;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+  padding: 1rem;
+  font-family: monospace;
+  overflow: auto;
+}
+
+.inline-code {
+  background-color: rgb(68, 71, 74);
+  font-weight: 800;
+  color: rgb(210, 143, 67);
+  padding: 0.1em 0.4em;
+  border-radius: 4px;
+  font-family: monospace;
+}
+
+@keyframes dotPulse {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-50%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.typing-indicator {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.typing-indicator .dot {
+  background-color: #000;
+  border-radius: 50%;
+  width: 6px;
+  height: 6px;
+  margin: 0 3px;
+  animation: dotPulse 1s ease-in-out infinite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.typing-indicator .dot:nth-child(1) {
+  animation-delay: -0.2s;
+}
+
+.typing-indicator .dot:nth-child(2) {
+  animation-delay: 0;
+}
+
+.typing-indicator .dot:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+.chat-history hr {
+  border: none;
+  border-top: 1px solid #ccc;
+}
+
+.footer {
+  margin-bottom: 20px;
+  position: fixed;
+  bottom: 0;
+  text-align: center; 
+}
+
+.footer a {
+  display: flex;
+  align-items: center;
+  color: #333;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer .icon {
+  margin-right: 5px;
+}
+
+/* Add this media query */
+@media screen and (max-width: 768px) {
+  .App {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .headline {
+    padding: 0.5rem;
+  }
+  
+  .headline h1 {
+    font-size: 1.2rem;
+  }
+  
+  .chat-container {
+    flex-direction: column-reverse;
+    width: 100%;
+    height: calc(100% - 100px); /* Adjust the height to account for the headline */
+    box-shadow: none;
+  }
+
+  .styled-select {
+    width: auto;
+    padding-top: 1rem;
+  }
+  
+  .chat-history-container {
+    width: 100%;
+    height: 20%;
+    border-right: none;
+    border-bottom: 1px solid #ddd;
+    margin-top: 0.8rem;
+  }
+
+  .chat-option-container {
+    width: unset; 
+    height: unset;
+    border-left: unset;
+    display: unset;
+    flex-direction: unset;
+  }
+  
+  .chat-ui {
+    width: 100%;
+    /* height: 70%; */
+  }
+  
+  .chat-input {
+    padding: 0.5rem;
+  }
+  
+  .chat-input button {
+    padding: 0.5rem 1rem;
   }
 }
+
+#root {
+  /* max-width: 1280px; */
+  margin: 0 auto;
+  /* padding: 2rem; */
+  text-align: center;
+  width: 100%;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
